welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:8: error: type mismatch;
 found   : Int
 required: Boolean
	}else if(d10 > 0 && d10 !=){
                            ^